--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: multiLME
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Multivariate mixed-effects models
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
+Author: Eleni Rosalina Andrinopoulou
+Maintainer: Eleni Rosalina Andrinopoulou <eleni.r.andrinopoulou@gsk.com>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: What license is it under?
@@ -11,5 +11,6 @@ Encoding: UTF-8
 LazyData: true
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    gifski
 VignetteBuilder: knitr
