--- a/docs/_site.yml
+++ b/docs/_site.yml
@@ -1,7 +1,7 @@
 name: "Vignette multiLME"
-output_dir: "."
+output_dir: "docs"
 navbar:
   title: "multiLME"
   left:
-    - text: ""
+    - text: "Vignette"
       href: multiLME-vignette.html
